--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@
 USE_VERCEL_KV=false
 # Replace this with your KV_REST_API_URL
 # E.g. https://large-poodle-44208.kv.vercel-storage.com
-KV_REST_API_URL="https://YOUR-URL"
+KV_REST_API_URL="https://stunning-grub-21635.upstash.io"
 # Replace this with your KV_REST_API_TOKEN
 # E.g. AaywASQgOWE4MTVkN2UtODZh...
-KV_REST_API_TOKEN="YOUR-API_TOKEN"
+KV_REST_API_TOKEN="AVSDAAIjcDE2YjBkZDA4Njc3YzI0NjZjODBmZjE1Yzg4M2FhZTAwM3AxMA"
