--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.7",
     "react": "^18.3.1",
