--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.7",
+    "history": "^5.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
