--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "history": "^5.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-rnd": "^10.4.13",
     "react-router-dom": "^6.27.0",
     "uuid": "^11.0.3"
   },
