--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@hello-pangea/dnd": "^17.0.0",
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.7",
     "history": "^5.3.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-rnd": "^10.4.13",
     "react-router-dom": "^6.27.0",
